2007-10-13  Callum McKenzie  <callum@spooky-possum.org>

	* Locations.xml.in: Updates to Virginian locations from
	serac@vt.edu (Bug #469356).

2007-08-01  Callum McKenzie  <callum@spooky-possum.org>

	* docs/nl/nl.po: Fix an incorrectly transcribed tag (see bug
	#448129).

2007-07-17  Jaap Haitsma  <jaap@haitsma.org>

	* GNOME_GWeatherApplet.xml: Use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456955

	* gweather-about.c: (gweather_about_run):
	* gweather-applet.c: (gweather_applet_create), (update_finish),
	(gweather_update):
	* gweather.h:
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145


2007-02-28  Sebastien Bacher  <seb128@ubuntu.com>

	* Locations.xml.in: add zones to Wisconsin cities, 
	patch from Alex Mauer <hawke@hawkesnest.net> (bug #363364)

2007-02-17  David Lodge <dave@cirt.net>

	* docs/en_GB/en_GB.po: Added (British) English translation.
	* docs/Makefile.am: Added en_GB to DOC_LINGUAS

2007-02-10  AP Singh Alam <aalam@users.sf.net>

	* docs/pa/pa.po: pa is added translation
	* docs/Makefile.am: pa is added to list

2007-01-30  Kjartan Maraas  <kmaraas@gnome.org>

	* gweather-applet.c: Add include to fix a warning.

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/C/gweather.xml: Fix build.

2006-11-08  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.
	
2006-10-02  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-pref.c: Stop the search of a location if the criterium is
	empty (bug #358499). Patch from Esteban Sánchez <esteban@steve-0.com>.

2006-09-03  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.

2006-09-02  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.
	* docs/sv/figures/*: Added screenshots.

2006-08-20  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: