@@ -8629,6 +8629,7 @@
         <!-- Translators: This is in Missouri in the United States. -->
         <_name>Chillicothe</_name>
         <code>KCDJ</code>
+	<zone>MOZ013</zone>
         <coordinates>39-49N 093-35W</coordinates>
       </location>
       <location>
@@ -8643,6 +8644,7 @@
         <!-- Translators: This is in Missouri in the United States. -->
         <_name>Farmington</_name>
         <code>KFAM</code>
+	<zone>MOZ074</zone>
         <coordinates>37-46N 090-26W</coordinates>
       </location>
       <location>
@@ -8673,6 +8675,7 @@
         <!-- Translators: This is in Missouri in the United States. -->
         <_name>Kaiser</_name>
         <code>KAIZ</code>
+	<zone>MOZ069</zone>
         <coordinates>38-06N 092-33W</coordinates>
       </location>
       <city>
@@ -8707,6 +8710,7 @@
         <!-- Translators: This is in Missouri in the United States. -->
         <_name>Lee's Summit</_name>
         <code>KLXT</code>
+	<zone>MOZ028</zone>
         <coordinates>38-57-35N 094-22-18W</coordinates>
       </location>
       <location>
@@ -8737,6 +8741,7 @@
         <!-- Translators: This is in Missouri in the United States. -->
         <_name>St. Charles</_name>
         <code>KSET</code>
+	<zone>MOZ061</zone>
         <coordinates>38-55-50N 090-25-57W</coordinates>
       </location>
       <location>
@@ -8777,12 +8782,14 @@
         <!-- Translators: This is in Missouri in the United States. -->
         <_name>West Plains</_name>
         <code>KUNO</code>
+	<zone>MOZ097</zone>
         <coordinates>36-52-45N 091-54-18W</coordinates>
       </location>
       <location>
         <!-- Translators: This is in Missouri in the United States. -->
         <_name>Whiteman</_name>
         <code>KSZL</code>
+	<zone>MOZ044</zone>
         <coordinates>38-44N 093-33W</coordinates>
       </location>
     </state>
