@@ -1,3 +1,10 @@
+2007-11-04  Callum McKenzie  <callum@spooky-possum.org>
+
+	* Locations.xml.in: Added forecast zone for West Plains,
+	Missouri. Thanks to Michael Crider (Bug #453539). In addition,
+	best-estimates of the appropriate zones for most other Missouri
+	locations where added where missing.
+
 2007-10-13  Callum McKenzie  <callum@spooky-possum.org>
 
 	* Locations.xml.in: Updates to Virginian locations from
